Bug 36790, support XHTML style element. Also fix CDATA section handling for title and textarea elements. r=harishd, sr=jst.